manifests/vos-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vos-deploy
  name: vos-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vos-deploy
  template:
    metadata:
      labels:
        app: vos-deploy
    spec:
      containers:
      - image: ${IMAGE}
        name: vos-test
      imagePullSecrets:
        - name: docker-secret
      restartPolicy: Always
      schedulerName: default-scheduler
