manifests/vos-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: vos-svc
  name: vos-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: vos-deploy
  type: ClusterIP
status:
  loadBalancer: {}
