manifests/vos-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vos-ingress
  namespace: test-test
  selfLink: /apis/extensions/v1beta1/namespaces/test-test/ingresses/vos-test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/service-weight: ''
  generation: 5
spec:
  rules:
    - host: test.lijiahao.cool
      http:
        paths:
          - backend:
              serviceName: vos-svc
              servicePort: 80
            path: /
  tls:
    - hosts:
        - test.lijiahao.cool
      secretName: vos-ingress-secret1621574105329
status:
  loadBalancer:
    ingress: 
      - ip: 8.140.24.190
